# ComfyUI-OpenAI-Compatible-Prompt-Runner

./: .comfyignore  README.md  config.ini.example  nodes.py  pyproject.toml
js/: prompt_runner.js
prompts/: 01_story_expansion_system.txt  02_script_generation_system.txt  03_storyboard_generation_system.txt  04_handdrawn_storyboard_prompt_system.txt  05_storyboard_panel_prompt_splitter_system.txt
